# TSR

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  TSR.cbp  cmake_install.cmake  glad.c  main.cpp
Libraries/include/glad/: glad.h
